feat: Add index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>안녕하세요. 자기소개 페이지 입니다.</p>
     <p>이름: 황시연</p>
     <p>과정: 핀테크 백엔드</p>
-    <p>강의 끝까지 잘 하도록 하겠습니다.</P>
+    <p>강의 끝까지 잘 하도록 하겠습니다!!</P>
+
 </body>
 </html>
